Severe redesign of all pages. Changed color schema, added animations. Cleaned css.

--- a/index.html
+++ b/index.html
@@ -5,16 +5,7 @@
     <link href="css/superslides.css" rel="stylesheet"  type="text/css">
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Raleway:200,300,500' rel='stylesheet' type='text/css'>
-    <script src="js/jquery-1.11.2.min.js"></script>
-    <script src="js/jquery.leanModal.min.js"></script>
-    <script src="js/jquery.superslides.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script id="webplate-stack" src="webplate/stack.js"></script>
-    <script src="js/readmore.min.js"></script>
-    <link rel="stylesheet" href="css/animate.css" type="text/css">
-    <script src="js/index.js"></script>
 
-    <link href="css/index.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   </head>
 
@@ -261,18 +252,18 @@
           </div>
         </div>
         <div class="categories">
-          <a href="#" class="list-group-item vt-p" id="category-art">Art</a>
-          <a href="#" class="list-group-item vt-p" id="category-dance">Dance</a>
-          <a href="#" class="list-group-item vt-p" id="category-design">Design</a>
-          <a href="#" class="list-group-item vt-p" id="category-filmAndVideo">Film & Video</a>
-          <a href="#" class="list-group-item vt-p" id="category-games">Games</a>
-          <a href="#" class="list-group-item vt-p" id="category-it">IT</a>
-          <a href="#" class="list-group-item vt-p" id="category-journalism">Journalism</a>
-          <a href="#" class="list-group-item vt-p" id="category-music">Music</a>
-          <a href="#" class="list-group-item vt-p" id="category-photography">Photography</a>
-          <a href="#" class="list-group-item vt-p" id="category-publishing">Publishing</a>
-          <a href="#" class="list-group-item vt-p" id="category-technology">Technology</a>
-          <a href="#" class="list-group-item vt-p" id="category-other">Other</a>
+          <a href="#" class="list-group-item vt-p" >Art</a>
+          <a href="#" class="list-group-item vt-p" >Dance</a>
+          <a href="#" class="list-group-item vt-p" >Design</a>
+          <a href="#" class="list-group-item vt-p" >Film & Video</a>
+          <a href="#" class="list-group-item vt-p" >Games</a>
+          <a href="#" class="list-group-item vt-p" >IT</a>
+          <a href="#" class="list-group-item vt-p" >Journalism</a>
+          <a href="#" class="list-group-item vt-p" >Music</a>
+          <a href="#" class="list-group-item vt-p" >Photography</a>
+          <a href="#" class="list-group-item vt-p" >Publishing</a>
+          <a href="#" class="list-group-item vt-p" >Technology</a>
+          <a href="#" class="list-group-item vt-p" >Other</a>
         </div>
       </div>
     </div>
@@ -288,17 +279,19 @@
             <div class="info-container">
               <p><b>by <a href="#" class="author">John Doe</a></b></p>
               <p class="project-category">Category: <a href="#">Art</a></p>
+              <hr>
               <ul class="project_hashtags">
                 <li class="hashtag">
-                  <a href="#"><span class="label label-success">Photoshop</span></a>
+                  <a href="#"><span class="label label-success">#Photoshop</span></a>
                 </li>
                 <li class="hashtag">
-                  <a href="#"><span class="label label-success">Illustrator</span></a>
+                  <a href="#"><span class="label label-success">#Illustrator</span></a>
                 </li>
                 <li class="hashtag">
-                  <a href="#"><span class="label label-success">Lightroom</span></a>
+                  <a href="#"><span class="label label-success">#Lightroom</span></a>
                 </li>
               </ul>
+              <p class="progress-header">Progress</p>
               <div class="progress">
                 <div class="progress-bar" style="width: 100%"></div>
               </div>
@@ -332,17 +325,19 @@
             <div class="info-container">
               <p><b>by <a href="#" class="author">Joann Doe</a></b></p>
               <p class="project-category">Category: <a href="#">Dance</a></p>
+              <hr>
               <ul class="project_hashtags">
                 <li class="hashtag">
-                  <a href="#"><span class="label label-success">Jazz-Funk</span></a>
+                  <a href="#"><span class="label label-success">#Jazz-Funk</span></a>
                 </li>
                 <li class="hashtag">
-                  <a href="#"><span class="label label-success">Acrobatic</span></a>
+                  <a href="#"><span class="label label-success">#Acrobatic</span></a>
                 </li>
                 <li class="hashtag">
-                  <a href="#"><span class="label label-success">Flashmob</span></a>
+                  <a href="#"><span class="label label-success">#Flashmob</span></a>
                 </li>
               </ul>
+              <p class="progress-header">Progress</p>
               <div class="progress">
                 <div class="progress-bar" style="width: 30%"></div>
               </div>
@@ -376,20 +371,22 @@
               <div class="info-container">
                 <p><b>by <a href="#" class="author">John van Doe</a></b></p>
                 <p class="project-category">Category: <a href="#">Design</a></p>
+                <hr>
                 <ul class="project_hashtags">
                   <li class="hashtag">
-                    <a href="#"><span class="label label-success">Interior</span></a>
+                    <a href="#"><span class="label label-success">#Interior</span></a>
                   </li>
                   <li class="hashtag">
-                    <a href="#"><span class="label label-success">Apartment</span></a>
+                    <a href="#"><span class="label label-success">#Apartment</span></a>
                   </li>
                   <li class="hashtag">
-                    <a href="#"><span class="label label-success">Design</span></a>
+                    <a href="#"><span class="label label-success">#Design</span></a>
                   </li>
                   <li class="hashtag">
-                    <a href="#"><span class="label label-success">3D</span><a/>
+                    <a href="#"><span class="label label-success">#3D</span><a/>
                   </li>
                 </ul>
+                <p class="progress-header">Progress</p>
                 <div class="progress">
                   <div class="progress-bar" style="width: 40%"></div>
                 </div>
@@ -423,20 +420,22 @@
               <div class="info-container">
                 <p><b>by <a href="#" class="author">John Do</a></b></p>
                 <p class="project-category">Category: <a href="#">Film & Video</a></p>
+                <hr>
                 <ul class="project_hashtags">
                   <li class="hashtag">
-                    <a href="#"><span class="label label-success">Sony Vegas</span></a>
+                    <a href="#"><span class="label label-success">#Sony Vegas</span></a>
                   </li>
                   <li class="hashtag">
-                    <a href="#"><span class="label label-success">Adobe After Effects</span></a>
+                    <a href="#"><span class="label label-success">#Adobe After Effects</span></a>
                   </li>
                   <li class="hashtag">
-                    <a href="#"><span class="label label-success">Cinema</span></a>
+                    <a href="#"><span class="label label-success">#Cinema</span></a>
                   </li>
                   <li class="hashtag">
-                    <a href="#"><span class="label label-success">Contest</span><a/>
+                    <a href="#"><span class="label label-success">#Contest</span><a/>
                   </li>
                 </ul>
+                <p class="progress-header">Progress</p>
                 <div class="progress">
                   <div class="progress-bar" style="width: 65%"></div>
                 </div>
@@ -471,20 +470,22 @@
               <div class="info-container">
                 <p><b>by <a href="#" class="author">John Does</a></b></p>
                 <p class="project-category">Category: <a href="#">Games</a></p>
+                <hr>
                 <ul class="project_hashtags">
                   <li class="hashtag">
-                    <a href="#"><span class="label label-success">C++</span></a>
+                    <a href="#"><span class="label label-success">#C++</span></a>
                   </li>
                   <li class="hashtag">
-                    <a href="#"><span class="label label-success">Unreal Engine 4</span></a>
+                    <a href="#"><span class="label label-success">#Unreal Engine 4</span></a>
                   </li>
                   <li class="hashtag">
-                    <a href="#"><span class="label label-success">Lua</span></a>
+                    <a href="#"><span class="label label-success">#Lua</span></a>
                   </li>
                   <li class="hashtag">
-                    <a href="#"><span class="label label-success">RPG</span><a/>
+                    <a href="#"><span class="label label-success">#RPG</span><a/>
                   </li>
                 </ul>
+                <p class="progress-header">Progress</p>
                 <div class="progress">
                   <div class="progress-bar" style="width: 20%"></div>
                 </div>
@@ -520,20 +521,22 @@
               <div class="info-container">
                 <p><b>by <a href="#" class="author">John Voe</a></b></p>
                 <p class="project-category">Category: <a href="#">IT</a></p>
+                <hr>
                 <ul class="project_hashtags">
                   <li class="hashtag">
-                    <a href="#"><span class="label label-success">HTML</span></a>
+                    <a href="#"><span class="label label-success">#HTML</span></a>
                   </li>
                   <li class="hashtag">
-                    <a href="#"><span class="label label-success">CSS</span></a>
+                    <a href="#"><span class="label label-success">#CSS</span></a>
                   </li>
                   <li class="hashtag">
-                    <a href="#"><span class="label label-success">AngularJS</span></a>
+                    <a href="#"><span class="label label-success">#AngularJS</span></a>
                   </li>
                   <li class="hashtag">
-                    <a href="#"><span class="label label-success">MongoDB</span><a/>
+                    <a href="#"><span class="label label-success">#MongoDB</span><a/>
                   </li>
                 </ul>
+                <p class="progress-header">Progress</p>
                 <div class="progress">
                   <div class="progress-bar" style="width: 35%"></div>
                 </div>
@@ -567,17 +570,19 @@
               <div class="info-container">
                 <p><b>by <a href="#" class="author">John Loe</a></b></p>
                 <p class="project-category">Category: <a href="#">Journalism</a></p>
+                <hr>
                 <ul class="project_hashtags">
                   <li class="hashtag">
-                    <a href="#"><span class="label label-success">Live</span></a>
+                    <a href="#"><span class="label label-success">#Live</span></a>
                   </li>
                   <li class="hashtag">
-                    <a href="#"><span class="label label-success">Stream</span></a>
+                    <a href="#"><span class="label label-success">#Stream</span></a>
                   </li>
                   <li class="hashtag">
-                    <a href="#"><span class="label label-success">Interview</span></a>
+                    <a href="#"><span class="label label-success">#Interview</span></a>
                   </li>
                 </ul>
+                <p class="progress-header">Progress</p>
                 <div class="progress">
                   <div class="progress-bar" style="width: 30%"></div>
                 </div>
@@ -612,20 +617,22 @@
                 <div class="info-container">
                   <p><b>by <a href="#" class="author">Joann Chloe</a></b></p>
                   <p class="project-category">Category: <a href="#">Music</a></p>
+                  <hr>
                   <ul class="project_hashtags">
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">Flat</span></a>
+                      <a href="#"><span class="label label-success">#Flat</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">Rock</span></a>
+                      <a href="#"><span class="label label-success">#Rock</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">Alternative</span></a>
+                      <a href="#"><span class="label label-success">#Alternative</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">Music</span><a/>
+                      <a href="#"><span class="label label-success">#Music</span><a/>
                     </li>
                   </ul>
+                  <p class="progress-header">Progress</p>
                   <div class="progress">
                     <div class="progress-bar" style="width: 45%"></div>
                   </div>
@@ -660,14 +667,16 @@
                 <div class="info-container">
                   <p><b>by <a href="#" class="author">Joann Toe</a></b></p>
                   <p class="project-category">Category: <a href="#">Photography</a></p>
+                  <hr>
                   <ul class="project_hashtags">
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">Photo Editing</span></a>
+                      <a href="#"><span class="label label-success">#Photo Editing</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">Portrait</span></a>
+                      <a href="#"><span class="label label-success">#Portrait</span></a>
                     </li>
                   </ul>
+                  <p class="progress-header">Progress</p>
                   <div class="progress">
                     <div class="progress-bar" style="width: 85%"></div>
                   </div>
@@ -702,14 +711,16 @@
                 <div class="info-container">
                   <p><b>by <a href="#" class="author">Joann Strove</a></b></p>
                   <p class="project-category">Category: <a href="#">Publishing</a></p>
+                  <hr>
                   <ul class="project_hashtags">
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">Memoir</span></a>
+                      <a href="#"><span class="label label-success">#Memoir</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">Politics</span></a>
+                      <a href="#"><span class="label label-success">#Politics</span></a>
                     </li>
                   </ul>
+                  <p class="progress-header">Progress</p>
                   <div class="progress">
                     <div class="progress-bar" style="width: 65%"></div>
                   </div>
@@ -744,17 +755,19 @@
                 <div class="info-container">
                   <p><b>by <a href="#" class="author">Joann Tech</a></b></p>
                   <p class="project-category">Category: <a href="#">Technology</a></p>
+                  <hr>
                   <ul class="project_hashtags">
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">IoT</span></a>
+                      <a href="#"><span class="label label-success">#IoT</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">Augmented Reality</span></a>
+                      <a href="#"><span class="label label-success">#Augmented Reality</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">Smart house</span></a>
+                      <a href="#"><span class="label label-success">#Smart house</span></a>
                     </li>
                   </ul>
+                  <p class="progress-header">Progress</p>
                   <div class="progress">
                     <div class="progress-bar" style="width: 85%"></div>
                   </div>
@@ -789,17 +802,19 @@
                 <div class="info-container">
                   <p><b>by <a href="#" class="author">Whoever</a></b></p>
                   <p class="project-category">Category: <a href="#">Charity</a></p>
+                  <hr>
                   <ul class="project_hashtags">
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">Poverty</span></a>
+                      <a href="#"><span class="label label-success">#Poverty</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">Charity</span></a>
+                      <a href="#"><span class="label label-success">#Charity</span></a>
                     </li>
                     <li class="hashtag">
-                      <a href="#"><span class="label label-success">Kids</span></a>
+                      <a href="#"><span class="label label-success">#Kids</span></a>
                     </li>
                   </ul>
+                  <p class="progress-header">Progress</p>
                   <div class="progress">
                     <div class="progress-bar" style="width: 25%"></div>
                   </div>
@@ -832,7 +847,7 @@
 
 <!-- Footer -->
       <footer>
-        <div class="container footer-container">
+        <div class="footer-container">
             <div class="row footer-row">
                 <div class="col-lg-12 footer-content">
                   <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 social-sector">
@@ -882,5 +897,15 @@
             </div>
         </div>
       </footer>
+      <script src="js/jquery-1.11.2.min.js"></script>
+      <script src="js/jquery.leanModal.min.js"></script>
+      <script src="js/jquery.superslides.min.js"></script>
+      <script src="js/bootstrap.min.js"></script>
+      <script id="webplate-stack" src="webplate/stack.js"></script>
+      <script src="js/readmore.min.js"></script>
+      <link rel="stylesheet" href="css/animate.css" type="text/css">
+      <script src="js/index.js"></script>
+
+      <link href="css/index.css" rel="stylesheet" type="text/css">
     </body>
 </html>
