--- a/html/project.html
+++ b/html/project.html
@@ -49,10 +49,10 @@
           <a href="#image"><img src="../img/proj_img-3.jpg"/></a>
         </div>
         <div class="author-name">
-          John Doe
+          <a href="#profile">John Doe</a>
         </div>
         <div class="user-action-buttons">
-          <div class="btn-follow"><a href="#" class="button line-blue">Follow</a></div>
+          <div class="btn-follow"><a href="#" class="button blue">Follow</a></div>
           <ul class="action-buttons">
             <li>
               <a href="#likes"><i class="fa fa-heart fa-2x"></i></a>
@@ -150,22 +150,22 @@
                 <li class="media">
                   <a href="#media">
                     <img src="../img/proj_img-4.jpg"></img>
-                    <p>Models</p>
+                    <p class="media-header">Models</p>
                   </a>
                 </li>
                 <li class="media">
                   <a href="#media">
                     <img src="../img/proj_img-1.jpg"></img>
-                    <p>Diagram</p>
+                    <p class="media-header">Diagram</p>
                   </a>
                 </li>
               </ul>
             </div>
+            <p class="progress-bar-header">Project's progress</p>
             <div class="progress">
               <div class="progress-bar progress-bar-success" style="width: 40%"></div>
             </div>
             </div>
-
           </div>
         </div>
         <div class="comments">
@@ -173,8 +173,54 @@
       </div>
     </div>
     <footer>
-      <div class="footer col-xs-12">
+      <div class="container footer-container">
+          <div class="row footer-row">
+              <div class="col-lg-12 footer-content">
+                <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 social-sector">
+                  <ul class="social_list">
+                    <li class="social-header">Follow us on:</li>
+                    <li class="social_btn"><a href="#"><span class="social-icon fb"><i class="fa fa-facebook fa-lg"></i></span></a></li>
+                    <li class="social_btn"><a href="#"><span class="social-icon google"><i class="fa fa-google-plus"></i></span></a></li>
+                    <li class="social_btn"><a href="#"><span class="social-icon linkedIn"><i class="fa fa-linkedin"></i></span></a></li>
+                  </ul>
+                </div>
+                <div class="col-sm-4 col-md-5 col-lg-7">
 
+                </div>
+                <div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 subscr-sector">
+                  <p class="subscription-header">Let's get in touch</p>
+                  <div class="form-group subscription">
+                    <div class="input-group">
+                      <input class="form-control input-sm xs-input" type="text" id="inputSmall">
+                      <span class="input-group-btn">
+                        <a href="#" class="button line-green small square">Subscribe</a>
+                      </span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-12 copyrights">
+                <ul class="list-inline">
+                    <li>
+                        <a href="#add"><i class="fa fa-plus-circle"></i> Add Project</a>
+                    </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li>
+                        <a href="#apply"><i class="fa fa-check-circle"></i> Apply for a project</a>
+                    </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li>
+                      <a href="#about">About</a>
+                    </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li>
+                        <a class="auth" href="#signin" class="vt-p">Sign in</a>
+                    </li>
+
+                </ul>
+                <p class="copyright text-muted small">Copyright &copy; Daniel Vasylenko 2015. All Rights Reserved</p>
+              </div>
+          </div>
       </div>
     </footer>
 
@@ -182,5 +228,6 @@
     <script src="../js/jquery-1.11.2.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script id="webplate-stack" src="../webplate/stack.js"></script>
+    <script src="../js/project.js"></script>
   </body>
 </html>
