Added emblem to navbar

--- a/html/project.html
+++ b/html/project.html
@@ -20,8 +20,8 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand vt-p" href="#">
-            <!--<img src="..."/> Brand icon-->
-            TeamBaker
+            <img src="../img/emblem.png"/>
+            <span class="brand-name">TeamBaker</span>
           </a>
         </div>
 
@@ -167,8 +167,20 @@
             </div>
             </div>
           </div>
-        </div>
-        <div class="comments">
+          <div class="comments">
+            <div class="comment">
+              <div class="author-image">
+                <img src="../img/proj_img-2.jpg"/>
+              </div>
+              <div class="comment-info">
+                Hello world
+              </div>
+              <div class="comment-content">
+                Content here
+              </div>
+              <hr>
+            </div>
+          </div>
         </div>
       </div>
     </div>
