--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link href="css/superslides.css" rel="stylesheet"  type="text/css">
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Raleway:200,300,500' rel='stylesheet' type='text/css'>
-
+    <link rel="stylesheet" href="css/animate.css" type="text/css">
+    <link href="css/index.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   </head>
 
@@ -123,9 +124,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+
           <a class="navbar-brand vt-p" href="#">
-            <!--<img src="..."/> Brand icon-->
-            TeamBaker
+            <img src="img/emblem.png"/>
+            <span class="brand-name">TeamBaker</span>
           </a>
         </div>
 
@@ -147,8 +149,6 @@
         </div>
       </div>
     </nav>
-
-
 
     <!-- Auth -->
     <div id="signin" class="popupContainer" style="display:none;">
@@ -903,9 +903,8 @@
       <script src="js/bootstrap.min.js"></script>
       <script id="webplate-stack" src="webplate/stack.js"></script>
       <script src="js/readmore.min.js"></script>
-      <link rel="stylesheet" href="css/animate.css" type="text/css">
       <script src="js/index.js"></script>
 
-      <link href="css/index.css" rel="stylesheet" type="text/css">
+
     </body>
 </html>
