Added emblem to footer. Fixed footer responsibility issue.

--- a/index.html
+++ b/index.html
@@ -850,7 +850,7 @@
         <div class="footer-container">
             <div class="row footer-row">
                 <div class="col-lg-12 footer-content">
-                  <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 social-sector">
+                  <div class="col-xs-12 col-sm-4 col-md-4 col-lg-3 social-sector">
                     <ul class="social_list">
                       <li class="social-header">Follow us on:</li>
                       <li class="social_btn"><a href="#"><span class="social-icon fb"><i class="fa fa-facebook fa-lg"></i></span></a></li>
@@ -858,10 +858,10 @@
                       <li class="social_btn"><a href="#"><span class="social-icon linkedIn"><i class="fa fa-linkedin"></i></span></a></li>
                     </ul>
                   </div>
-                  <div class="col-sm-4 col-md-5 col-lg-7">
-
+                  <div class="col-xs-12 col-sm-4 col-md-4 col-lg-6 logo-sector">
+                    <img src="img/logo.png"/>
                   </div>
-                  <div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 subscr-sector">
+                  <div class="col-xs-12 col-sm-4 col-md-4 col-lg-3 subscr-sector">
                     <p class="subscription-header">Let's get in touch</p>
                     <div class="form-group subscription">
                       <div class="input-group">
@@ -873,7 +873,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-12 copyrights">
+                <div class="col-xs-12 copyrights">
                   <ul class="list-inline">
                       <li>
                           <a href="#add"><i class="fa fa-plus-circle"></i> Add Project</a>
