Fixed carousel. Improved look-and-feel.

--- a/html/project.html
+++ b/html/project.html
@@ -44,7 +44,7 @@
       </div>
     </nav>
     <div class="row content-wrapper">
-      <div class="leftPart col-xs-12 col-sm-5 col-md-4">
+      <div class="author-section col-xs-12 col-sm-5 col-md-4">
         <div class="profile-image">
           <a href="#image"><img src="../img/proj_img-3.jpg"/></a>
         </div>
@@ -52,7 +52,7 @@
           <a href="#profile">John Doe</a>
         </div>
         <div class="user-action-buttons">
-          <div class="btn-follow"><a href="#" class="button blue">Follow</a></div>
+          <div class="btn-follow"><a href="#" class="button line-blue">Follow</a></div>
           <ul class="action-buttons">
             <li>
               <a href="#likes"><i class="fa fa-heart fa-2x"></i></a>
@@ -74,26 +74,26 @@
         <div class="team-specs">
           <div class="spec">
             <div class="spec-container">
-              <a href="#" class="button aqua pill spec-name">Test Speciality 1</a>
-              <a href="#apply" class="button pink pill btn-apply"><i class="fa fa-plus"></i></a>
+              <a href="#" class="button line-aqua pill spec-name">Test Speciality 1</a>
+              <a href="#apply" class="button line-pink pill btn-apply"><i class="fa fa-plus"></i></a>
             </div>
           </div>
           <div class="spec">
             <div class="spec-container">
-              <a href="#" class="button aqua pill spec-name">Test Speciality 2</a>
-              <a href="#apply" class="button pink pill btn-apply"><i class="fa fa-plus"></i></a>
+              <a href="#" class="button line-aqua pill spec-name">Test Speciality 2</a>
+              <a href="#apply" class="button line-pink pill btn-apply"><i class="fa fa-plus"></i></a>
             </div>
           </div>
           <div class="spec">
             <div class="spec-container">
-              <a href="#" class="button aqua pill spec-name">Test Speciality 3</a>
-              <a href="#apply" class="button pink pill btn-apply"><i class="fa fa-plus"></i></a>
+              <a href="#" class="button line-aqua pill spec-name">Test Speciality 3</a>
+              <a href="#apply" class="button line-pink pill btn-apply"><i class="fa fa-plus"></i></a>
             </div>
           </div>
           <p class="team-count">0/3</p>
         </div>
       </div>
-      <div class="rightPart col-xs-12 col-sm-7 col-md-8">
+      <div class="project-section col-xs-12 col-sm-7 col-md-8">
         <div class="project-name">
           Project name
         </div>
