--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <h1 class="caption">Slide 1</h1>
               <div class="contrast">
                 <h4>Description for slide 1</h4>
-                <a href="#" class="button square large pink">Read more</a>
+                <a href="#" class="button square large line-white">Read more</a>
               </div>
             </div>
           </li>
@@ -31,7 +31,7 @@
               <h1 class="caption">Slide 2</h1>
               <div class="contrast">
                 <h4>Description for slide 2</h4>
-                <a href="#" class="button square large pink">Read more</a>
+                <a href="#" class="button square large line-white">Read more</a>
               </div>
             </div>
           </li>
@@ -41,7 +41,7 @@
               <h1 class="caption">Slide 3</h1>
               <div class="contrast">
                 <h4>Description for slide 3</h4>
-                <a href="#" class="button square large pink">Read more</a>
+                <a href="#" class="button square large line-white">Read more</a>
               </div>
             </div>
           </li>
@@ -51,7 +51,7 @@
               <h1 class="caption">Slide 4</h1>
               <div class="contrast">
                 <h4>Description for slide 4</h4>
-                <a href="#" class="button square large pink">Read more</a>
+                <a href="#" class="button square large line-white">Read more</a>
               </div>
             </div>
           </li>
@@ -61,7 +61,7 @@
               <h1 class="caption">Skyscrapers</h1>
               <div class="contrast">
                 <h4>Some lorem ipsum stuff.</h4>
-                <a href="#" class="button square large pink">Read more</a>
+                <a href="#" class="button square large line-white">Read more</a>
               </div>
             </div>
           </li>
@@ -71,7 +71,7 @@
               <h1 class="caption">Picturesque picture</h1>
               <div class="contrast">
                 <h4>Some lorem ipsum stuff here.</h4>
-                <a href="#" class="button square large pink">Read more</a>
+                <a href="#" class="button square large line-white">Read more</a>
               </div>
             </div>
           </li>
@@ -81,7 +81,7 @@
               <h1 class="caption">Cityscape</h1>
               <div class="contrast">
                 <h4>It's New York, babe :)</h4>
-                <a href="#" class="button square large pink">Read more</a>
+                <a href="#" class="button square large line-white">Read more</a>
               </div>
             </div>
           </li>
@@ -91,7 +91,7 @@
               <h1 class="caption">Night shot</h1>
               <div class="contrast">
                 <h4>Nicely done with focus</h4>
-                <a href="#" class="button square large pink">Read more</a>
+                <a href="#" class="button square large line-white">Read more</a>
               </div>
             </div>
           </li>
@@ -101,7 +101,7 @@
               <h1 class="caption">Black Cat</h1>
               <div class="contrast">
                 <h4>The last slide... Rly :)</h4>
-                <a href="#" class="button square large pink">Read more</a>
+                <a href="#" class="button square large line-white">Read more</a>
               </div>
             </div>
           </li>
