--- a/html/project.html
+++ b/html/project.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
   <head>
     <link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Raleway:200,300,500' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Anonymous+Pro:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="../css/animate.css" type="text/css">
     <link href="../css/project.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -120,7 +122,7 @@
             </div>
           </div>
           <div class="additional-info">
-            <p class="progress-bar-header">Project's progress</p>
+            <p class="progress-bar-header">Progress</p>
             <div class="progress">
               <div class="progress-bar progress-bar-success" style="width: 40%"></div>
             </div>
