Fix for small screens

--- a/html/project.html
+++ b/html/project.html
@@ -211,7 +211,7 @@
           <div class="comment row">
             <div class="avatar-container span-3">
               <a href="#image" class="author-image">
-                <img src="../img/author-m.jpg" class="img-responsive img-circle"/>
+                <img src="../img/author-f.jpg" class="img-responsive img-circle"/>
               </a>
             </div>
             <div class="comment-insides span-9">
