Search page basic structure

--- a/html/project.html
+++ b/html/project.html
@@ -273,7 +273,7 @@
                     <div class="input-group">
                       <input class="form-control input-sm xs-input" type="text" id="inputSmall">
                       <span class="input-group-btn">
-                        <a href="#" class="button line-green small square">Subscribe</a>
+                        <a href="#" class="subscr button line-green small square">Subscribe</a>
                       </span>
                     </div>
                   </div>
