--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <span class="icon-bar"></span>
           </button>
 
-          <a class="navbar-brand vt-p" href="#">
+          <a class="navbar-brand vt-p" href="index.html">
             <img src="img/emblem.png"/>
             <span class="brand-name">TeamBaker</span>
           </a>
@@ -265,24 +265,24 @@
           <div class="input-group">
             <input class="form-control input-sm xs-input" type="text" id="inputSmall">
             <span class="input-group-btn">
-              <a href="#" class="button line-green small square">Search</a>
+              <a href="#" class="button line-black small square"><i class="fa fa-search"></i></a>
               <!--<button class="btn btn-info btn-sm" type="button">Search</button>-->
             </span>
           </div>
         </div>
         <div class="categories">
-          <a href="#" class="list-group-item vt-p" >Art</a>
-          <a href="#" class="list-group-item vt-p" >Dance</a>
-          <a href="#" class="list-group-item vt-p" >Design</a>
-          <a href="#" class="list-group-item vt-p" >Film & Video</a>
-          <a href="#" class="list-group-item vt-p" >Games</a>
-          <a href="#" class="list-group-item vt-p" >IT</a>
-          <a href="#" class="list-group-item vt-p" >Journalism</a>
-          <a href="#" class="list-group-item vt-p" >Music</a>
-          <a href="#" class="list-group-item vt-p" >Photography</a>
-          <a href="#" class="list-group-item vt-p" >Publishing</a>
-          <a href="#" class="list-group-item vt-p" >Technology</a>
-          <a href="#" class="list-group-item vt-p" >Other</a>
+          <a href="html/search.html" class="list-group-item vt-p" >Art</a>
+          <a href="html/search.html" class="list-group-item vt-p" >Dance</a>
+          <a href="html/search.html" class="list-group-item vt-p" >Design</a>
+          <a href="html/search.html" class="list-group-item vt-p" >Film & Video</a>
+          <a href="html/search.html" class="list-group-item vt-p" >Games</a>
+          <a href="html/search.html" class="list-group-item vt-p" >IT</a>
+          <a href="html/search.html" class="list-group-item vt-p" >Journalism</a>
+          <a href="html/search.html" class="list-group-item vt-p" >Music</a>
+          <a href="html/search.html" class="list-group-item vt-p" >Photography</a>
+          <a href="html/search.html" class="list-group-item vt-p" >Publishing</a>
+          <a href="html/search.html" class="list-group-item vt-p" >Technology</a>
+          <a href="html/search.html" class="list-group-item vt-p" >Other</a>
         </div>
       </div>
     </div>
@@ -886,7 +886,7 @@
                       <div class="input-group">
                         <input class="form-control input-sm xs-input" type="text" id="inputSmall">
                         <span class="input-group-btn">
-                          <a href="#" class="button line-green small square">Subscribe</a>
+                          <a href="#" class="subscr button line-green small square">Subscribe</a>
                         </span>
                       </div>
                     </div>
